# Iris_flower_prediction_app

./: app1.py  code-13.ipynb  pyproject.toml
Persistence/: knn_model.sav  scaler_features.sav
